  preferences db. allowed values are as follows (case-insensitive):
	"alpha_software" "basic_hardware" "3d_hardware" "alpha_hardware"
(yes, they correspond to their Evas equivalents... how odd)

-----
20000902-0627-PDT, pabs

- updated README and  INSTALL to reflect Evas dependency, and AUTHORS 
with all I know about RbdPngn (ie not much.. info please?).

-----
20000903-1201-PDT, pabs

- added ewl_window_handle_expose() -- can be connected as an event
callback to EwlWindows via
  ewl_callback_add(win,EWL_EVENT_EXPOSE,ewl_window_handle_espose NULL)

-----
20000903-1222-PDT, pabs

- added ewl_window_handle_configure()... just an evas hook atm -- see 
the desc of ewl_window_handle_expose() for more info.

-----
20000903-1634-PDT, pabs

- added more to ewl_window_handle_configure()

-----
20000903-1724-PDT, pabs

- added realize and unrealize event types. the reason they're treated
as events is so parent classes can add inheritable attributes (eg
EwlButton backgrounds, etc etc etc).
- added ewl_widget_realize() and ewl_widget_unrealize() (which just
queue realize and unrealize events, respectively).

-----
20000905-1155-PDT, pabs

- EwlWindows are now using hte new EwlEventRealize/Unrealize for widgets.
this presents an interesting predicament -- since realization doesn't
happen right away, X calls for ewlwindows must now be done like this:

EwlWindow *window = (EwlWindow*) widget;
...
if (!window->xwin)	{
	ewl_widget_realize(widget);
	sev = ewl_widget_new_by_type_with_widget(EWL_EVENT_SHOW, widget);
	ewl_event_queue(sev);
} else {
	XMapWindow(ewl_get_display(), window->xwin);
}
...

basically since hte realization is deferred, it needs to queue another
show on the widget.  does this sound liek the correct behavior, or
should I make some sort of priority event queue, or mvoe realize
stuff elsewhere (although I really do think in belongs as an event --
it allows chaining, inheritance, and all sorts of other goodies for
free).
